# perfect-photo-2

./: README.md  index.html
home_page/static/css/: main.css  main.css.map
static/c_cpp/: CMakeLists.txt  exportable.h  image_processing.cpp
static/css/: _animations.scss  _base.scss  _components.scss  _utils.scss  main.css  main.css.map  main.scss
static/js/: drag_n_drop.js  garbage.js  image_processing.js  index.js  main.wasm  test.js
